chore: Use Gradle Kotlin DSL